# research-buddy

./: CLAUDE.md  README.md
backend/: conftest.py  pyproject.toml
backend/app/: arxiv_abstracts.py  arxiv_client.py  citation_client.py  main.py  models.py  openalex_client.py  ranker.py  search_service.py  sorter.py  store.py
backend/tests/: test_api.py  test_arxiv_abstracts.py  test_arxiv_client.py  test_citation_client.py  test_live_smoke.py  test_models.py  test_openalex_client.py  test_ranker.py  test_search_service.py  test_sorter.py  test_store.py
backend/tests/fixtures/: arxiv_abstracts_sample.xml  arxiv_sample.xml
docs/superpowers/plans/: 2026-06-08-milestone-1-retrieve-then-sort.md
docs/superpowers/specs/: 2026-06-08-research-buddy-discovery-ranking-design.md  2026-06-08-research-buddy-retrieve-then-sort-redesign.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/__tests__/: App.test.tsx  ResultCard.test.tsx  SearchBar.test.tsx  SortControl.test.tsx  api.test.ts
frontend/src/components/: ResultCard.tsx  ResultList.tsx  SearchBar.tsx  SortControl.tsx  WeightSliders.tsx
