[project]
name = "research-buddy-backend"
version = "0.1.0"
description = "Research Buddy Milestone 1 — paper discovery & ranking"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "feedparser>=6.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: hits real external APIs; skipped unless --run-live is passed",
]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py39"
